Bug 174800 - Korganizer crashes with RFC822 attachment.
Summary: Korganizer crashes with RFC822 attachment.
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 159183 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-10 18:53 UTC by Ian Turner
Modified: 2011-09-24 21:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Turner 2008-11-10 18:53:06 UTC
Version:            (using KDE 4.1.2)
OS:                Linux
Installed from:    Ubuntu Packages

Steps to reproduce:
1. Open kmail, find a message with no attachments (not even HTML parts).
2. Click the "Create ToDo/Reminder" button
3. Korganizer opens a new to-do.
4. Drag and drop the original message from (1) into the attachments area of the new to-do.
5. Double-click the new rfc/822 attachment.

Expected behavior: The original message opens in a new window
Actual behavior: Korganizer crashes. Backtrace is below; if anyone has advice on how to get proper debugging symbols on Ubuntu, I'm happy to follow them (there is no korganizer-dbg package).

#6  0xb7fd7430 in __kernel_vsyscall ()
#7  0xb67cf880 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb67d1248 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb7486795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb7486872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb7486915 in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb7ed2b10 in AttachmentIconView::tempFileForAttachment (this=0x9cf5978, 
    attachment=0x9ca82a8) at /usr/include/qt4/QtCore/qlist.h:246
#13 0xb7ecb615 in KOEditorAttachments::showAttachment (this=0x9cf5b30, 
    item=0x9caccb8)
    at /build/buildd/kdepim-4.1.3/korganizer/koeditorattachments.cpp:616
#14 0xb7ed1e3c in KOEditorAttachments::qt_metacall (this=0x9cf5b30, 
    _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbfbd866c)
    at /build/buildd/kdepim-4.1.3/obj-i486-linux-gnu/korganizer/koeditorattachments.moc:148
#15 0xb7593a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0xb75947e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#17 0xb609a393 in Q3IconView::doubleClicked ()
   from /usr/lib/libQt3Support.so.4
#18 0xb5eff35c in Q3IconView::contentsMouseDoubleClickEvent ()
   from /usr/lib/libQt3Support.so.4
#19 0xb62c3cdc in K3IconView::contentsMouseDoubleClickEvent (this=0x9cf5978, 
    e=0xbfbd86fc)
    at /build/buildd/kde4libs-4.1.3/kde3support/kdeui/k3iconview.cpp:307
#20 0xb5f88ed1 in Q3ScrollView::viewportMouseDoubleClickEvent ()
   from /usr/lib/libQt3Support.so.4
#21 0xb5f8abf0 in Q3ScrollView::eventFilter ()
   from /usr/lib/libQt3Support.so.4
#22 0xb5f07a57 in Q3IconView::eventFilter () from /usr/lib/libQt3Support.so.4
#23 0xb757e04a in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#24 0xb6c6e8ca in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#25 0xb6c77121 in QApplication::notify () from /usr/lib/libQtGui.so.4
#26 0xb7a4db2d in KApplication::notify (this=0xbfbd9570, receiver=0x9cf6990, 
    event=0xbfbd8cd8)
    at /build/buildd/kde4libs-4.1.3/kdeui/kernel/kapplication.cpp:311
#27 0xb757ee61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#28 0xb6c763ae in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#29 0xb6ce0696 in ?? () from /usr/lib/libQtGui.so.4
#30 0xb6cdfa25 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#31 0xb6d097ea in ?? () from /usr/lib/libQtGui.so.4
#32 0xb57976f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#33 0xb579ada3 in ?? () from /usr/lib/libglib-2.0.so.0
#34 0xb579af61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#35 0xb75a9478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#36 0xb6d08ee5 in ?? () from /usr/lib/libQtGui.so.4
#37 0xb757d52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#38 0xb757d6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#39 0xb757fda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#40 0xb6c6e767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#41 0x0804ea50 in main (argc=)
    at /build/buildd/kdepim-4.1.3/korganizer/main.cpp:58
#0  0xb7fd7430 in __kernel_vsyscall ()
Comment 1 Christophe Marin 2008-11-18 22:56:56 UTC
Confirmed : 

Application: KOrganizer (korganizer), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
0xb58ae54b in nanosleep () from /lib/libc.so.6
[Current thread is 1 (Thread 0xb4d87700 (LWP 867))]

Thread 1 (Thread 0xb4d87700 (LWP 867)):
[KCrash Handler]
#5  AttachmentIconView::tempFileForAttachment (this=0x891ea38, attachment=0x891d578) at /usr/include/QtCore/qatomic_i386.h:116
#6  0xb7222c1c in KOEditorAttachments::showAttachment (this=0x891e930, item=0x8925b78) at /usr/src/debug/kdepim-4.1.73/korganizer/koeditorattachments.cpp:616
#7  0xb722911c in KOEditorAttachments::qt_metacall (this=0x891e930, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbfc71bdc)
    at /usr/src/debug/kdepim-4.1.73/build/korganizer/koeditorattachments.moc:148
#8  0xb6640580 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#9  0xb6641302 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#10 0xb69fae93 in Q3IconView::doubleClicked(Q3IconViewItem*) () from /usr/lib/libQt3Support.so.4
#11 0xb686004c in Q3IconView::contentsMouseDoubleClickEvent(QMouseEvent*) () from /usr/lib/libQt3Support.so.4
#12 0xb6f2361c in K3IconView::contentsMouseDoubleClickEvent(QMouseEvent*) () from /usr/lib/libkde3support.so.4
#13 0xb68e9b11 in Q3ScrollView::viewportMouseDoubleClickEvent(QMouseEvent*) () from /usr/lib/libQt3Support.so.4
#14 0xb68eb830 in Q3ScrollView::eventFilter(QObject*, QEvent*) () from /usr/lib/libQt3Support.so.4
#15 0xb6868747 in Q3IconView::eventFilter(QObject*, QEvent*) () from /usr/lib/libQt3Support.so.4
#16 0xb662ab3a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#17 0xb5bb78da in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#18 0xb5bc0111 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#19 0xb7b19fdd in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#20 0xb662b961 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#21 0xb5bbf39e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib/libQtGui.so.4
#22 0xb5c29716 in ?? () from /usr/lib/libQtGui.so.4
#23 0xb5c28ac5 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#24 0xb5c5108a in ?? () from /usr/lib/libQtGui.so.4
#25 0xb54629a8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0xb5466063 in ?? () from /usr/lib/libglib-2.0.so.0
#27 0xb5466221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0xb6655fb8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#29 0xb5c50785 in ?? () from /usr/lib/libQtGui.so.4
#30 0xb662a01a in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#31 0xb662a1da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0xb662c895 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#33 0xb5bb7777 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#34 0x08051250 in main (argc=) at /usr/src/debug/kdepim-4.1.73/korganizer/main.cpp:58

Comment 2 Sergio Martins 2008-12-23 01:32:33 UTC
SVN commit 900490 by smartins:

Only call KTemporaryFile::setSuffix() if the associated mimeType has patterns, otherwise an assert in QT will be hit.

BUG: 174800


 M  +6 -3      koeditorattachments.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=900490
Comment 3 Ian Turner 2008-12-23 03:36:48 UTC
Thanks Sergio!
Comment 4 Christophe Marin 2011-09-24 21:12:15 UTC
*** Bug 159183 has been marked as a duplicate of this bug. ***