Only call KTemporaryFile::setSuffix() if the associated mimeType has patterns, otherwise an assert in QT will be hit.

BUG: 174800

svn path=/trunk/KDE/kdepim/; revision=900490